--- a/package.json
+++ b/package.json
@@ -254,8 +254,8 @@
     "mmjstool": "mmjstool",
     "i18n-extract": "npm run mmjstool -- i18n extract-webapp",
     "i18n-clean-empty": "npm run mmjstool -- i18n clean-empty --webapp-dir .",
-    "storybook": "start-storybook -p 6006 -s ./storybook/static",
-    "build-storybook": "build-storybook -s ./storybook/static",
+    "storybook": "start-storybook -p 6006 -s ./src/storybook/static",
+    "build-storybook": "build-storybook -s ./src/storybook/static",
     "check-types": "tsc"
   }
 }
