revert to original name for testing

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@formatjs/intl-pluralrules": "3.2.3",
     "@formatjs/intl-relativetimeformat": "6.2.3",
     "@mattermost/compass-icons": "0.1.0",
-    "@mattermost/redux": "5.3.1",
+    "mattermost-redux": "5.3.1",
     "@stripe/react-stripe-js": "1.1.2",
     "@stripe/stripe-js": "1.9.0",
     "@types/country-list": "2.1.0",
