--- a/packages/mattermost-redux/package.json
+++ b/packages/mattermost-redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mattermost/redux",
+  "name": "mattermost-redux",
   "version": "5.3.1",
   "description": "Common code (API client, Redux stores, logic, utility functions) for building a Mattermost client",
   "homepage": "https://github.com/mattermost/mattermost-redux",
@@ -17,8 +17,7 @@
     "tsc:watch": "ttsc --noEmit --watch",
     "test": "jest --forceExit --detectOpenHandles --maxWorkers=2",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "postinstall": "yarn run build"
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "core-js": "3.6.5",
